k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage # name of the volume
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # name of PVC config created to use
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432 # Port to open and mapped up to multiclient image
          volumeMounts:
            - name: postgres-storage # Go ousiide containers and look for volume with this name
              mountPath: /var/lib/postgresql/data # Backup this folder from postgres, Continuously add this folder data to PVC
              subPath: postgres # data stored inside PVC should be in a folder with this name
