k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # higher level config for ingress
    kubernetes.io/ingress.class: nginx # Create ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: / # Configure how a copy of nginx behaves (like remove /api part after routing to server)
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
